RTL overlay scrollbar on Mac is left aligned.

BUG=626919

Review-Url: https://codereview.chromium.org/2512033002
Cr-Commit-Position: refs/heads/master@{#434239}

Former-commit-id: 94a2767135371369605eda754487ea11ff7213b2